# Cubic-Spline

./: LICENSE  README.md  __init__.py  cubic_spline.py  pyproject.toml  setup.py  tools.py  vfi_demo.ipynb
applications/: firm_engine.py  vfi_demo.ipynb
src/cubic_spline/: __init__.py  cubic_spline.py
