[build-system]
requires = [
    "setuptools>=61.0",
    "numpy>=1.21.0",
    "numba>=0.55.1"
]
build-backend = "setuptools.build_meta"


[project]
name = "cubic-spline"
version = "0.1.0"
authors = [
  { name="Harrison Snell", email="harrison.snell23@gmail.com" },
]
description = "Cubic spline interpolation with Numba compatibility"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hwsnell/Cubic-Spline"